--- a/css/notesPage.css
+++ b/css/notesPage.css
@@ -9,7 +9,7 @@
     padding: 20px;
     box-sizing: border-box;
     font-family: 'Kodchasan', sans-serif;
-    z-index: 999;
+    z-index: 10;
     display: none;
 }
 
@@ -39,7 +39,7 @@
     top: 50px;
     overflow: auto; 
     left: 165px;
-    z-index: 999;
+    z-index: 10;
     padding: 20px;
 }
 
