--- a/css/todoPage.css
+++ b/css/todoPage.css
@@ -7,7 +7,7 @@
     padding: 20px;
     box-sizing: border-box;
     font-family: 'Kodchasan', sans-serif;
-    z-index: 999;
+    z-index: 10;
     display: none;
 }
 
