--- a/css/verticalTimer.css
+++ b/css/verticalTimer.css
@@ -7,7 +7,7 @@
   position: absolute;
   top: 25px;
   left: 1130px;
-  z-index: 999;
+  z-index: 10;
 }
 
 .timer-fill {
